# Authentra

./: Anchor.toml  Cargo.toml  README.md  package.json
programs/license_manager/: Cargo.toml
programs/license_manager/src/: errors.rs  lib.rs
programs/license_manager/src/instructions/: initialize_config.rs  mod.rs  purchase_license.rs  verify_license.rs
programs/license_manager/src/state/: active_license.rs  license_config.rs  mod.rs
programs/license_manager/tests/: helpers.rs  integration.rs  license_manager.rs  mod.rs  test_initialize_config.rs  test_purchase_license.rs  test_verify_license.rs
programs/registery/: Cargo.toml
programs/registery/src/: errors.rs  lib.rs  utils.rs
programs/registery/src/instructions/: mod.rs  register_content.rs  update_metadata.rs  verify_ownership.rs
programs/registery/src/state/: content.rs  mod.rs
tests/: content-licensing.ts
