[workspace]
members = [
    "programs/creator-standard/programs/solana-nft-programs-creator-standard",
    "programs/registery"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
